[gd_scene load_steps=12 format=3 uid="uid://hfvontuhf1jo"]

[ext_resource type="Script" path="res://Scenes/Game/Fish/fish_spawner.gd" id="1_bmfd1"]
[ext_resource type="PackedScene" uid="uid://nucutein2dvs" path="res://Scenes/Game/Fish/fish.tscn" id="2_fe38g"]
[ext_resource type="Texture2D" uid="uid://dx26mdqjofygb" path="res://Scenes/Game/Fish/tempimage/customerbackground.png" id="3_w8wgg"]
[ext_resource type="Texture2D" uid="uid://dwdc4uv2vg3so" path="res://Scenes/Game/Fish/tempimage/customerbench.png" id="4_5mtq4"]
[ext_resource type="PackedScene" uid="uid://vgso8pxvvl6f" path="res://Scenes/Game/Fish/order_ui.tscn" id="4_re5ye"]
[ext_resource type="Texture2D" uid="uid://b3ahc2t4p5sgj" path="res://Scenes/Game/Fish/tempimage/screenborder.png" id="5_e50j0"]
[ext_resource type="PackedScene" uid="uid://cgprsn6ocf2ld" path="res://Scenes/Game/Fish/fish_picture_book.tscn" id="5_yirsa"]
[ext_resource type="Texture2D" uid="uid://dqbiuks5xjivk" path="res://Scenes/Game/Fish/tempimage/rejectbutton.png" id="8_cdk73"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_upct5"]
texture = ExtResource("8_cdk73")
modulate_color = Color(1, 0.247059, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ynpn"]
texture = ExtResource("8_cdk73")
modulate_color = Color(1, 1, 0.635294, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g8lcf"]
texture = ExtResource("8_cdk73")

[node name="FishSpawner" type="Node2D"]
script = ExtResource("1_bmfd1")
fish_scene = ExtResource("2_fe38g")

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(572.959, 325.141)
scale = Vector2(0.326135, 0.261176)
texture = ExtResource("3_w8wgg")

[node name="Button" type="Button" parent="BackGround"]
offset_left = -58.1323
offset_top = -540.406
offset_right = 291.868
offset_bottom = -333.406
text = "spawn fish"

[node name="CommentBackGround" type="Sprite2D" parent="BackGround"]
position = Vector2(0.126, -685.387)
scale = Vector2(1, 2.12438)
texture = ExtResource("4_5mtq4")

[node name="SideBar" type="Sprite2D" parent="BackGround"]
position = Vector2(-334.091, -11.4862)
scale = Vector2(1, 1.00245)
texture = ExtResource("5_e50j0")

[node name="OrderUI" parent="." instance=ExtResource("4_re5ye")]
offset_left = 1.0
offset_top = 265.0
offset_right = 464.0
offset_bottom = 648.0

[node name="Fish_PictureBook" parent="." instance=ExtResource("5_yirsa")]

[node name="RejectButton" type="Button" parent="."]
offset_left = 98.0
offset_top = 589.0
offset_right = 336.0
offset_bottom = 665.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxTexture_upct5")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_upct5")
theme_override_styles/hover = SubResource("StyleBoxTexture_5ynpn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_upct5")
theme_override_styles/normal = SubResource("StyleBoxTexture_g8lcf")

[connection signal="pressed" from="BackGround/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="RejectButton" to="." method="_on_reject_button_pressed"]
